PUSH NOTE : index.md

--- a/Заметки Иврит.md
+++ b/Заметки Иврит.md
@@ -10,7 +10,7 @@ created:
 ## Здесь вы найдете
 - [[./Чем отличается בלבד от רק|Чем отличается בלבד от רק]]
 - [[./Три разных способа сказать "ты мне нравишься" на иврите|Ты мне нравишься на иврите]]
-- [[./Три разных способа сказать выглядишь круто на иврите:|Выглядишь круто]]
+- [[./Три разных способа сказать выглядишь круто на иврите|Выглядишь круто]]
 
 
 
