PUSH NOTE : Выглядишь круто.md

--- a/Три разных способа сказать выглядишь круто на иврите.md
+++ b/Три разных способа сказать выглядишь круто на иврите.md
@@ -1,13 +1,13 @@
 ---
 filename: looks-good
 title: Три разных способа сказать выглядишь круто на иврите
-description: 'три разных способа сказать "выглядишь круто" на иврите:'
+description: три разных способа сказать выглядишь круто на иврите
 share: "true"
 tags:
   - "#notes/hebrew"
 ---
 created: 9:22 PM - May 27, 2024
-modified: 9:40 PM - May 27, 2024
+modified: 9:42 PM - May 27, 2024
 
 Вот три разных способа сказать "выглядишь круто" на иврите:
 
