PUSH NOTE : Знак обнимашек.md

--- a/Знак обнимашек.md
+++ b/Знак обнимашек.md
@@ -7,9 +7,11 @@ tags:
   - обнимашки
   - hugs
   - информация
+  - shared/blog
+  - shared
 ---
 created: 10:33 אחה״צ - יוני 13, 2024
-modified: 12:18 לפנה״צ - יוני 14, 2024
+modified: 2:05 לפנה״צ - יוני 16, 2024
 
 # Знак обнимашек
 ## Скрещенные руки
