--- a/Знак обнимашек.md
+++ b/Знак обнимашек.md
@@ -1,6 +1,6 @@
 ---
-title: 
-description: ""
+title: Знак обнимашки
+description: Знак коммуникации и принадлеюности
 share: "true"
 tags:
   - коммуникация
@@ -11,11 +11,17 @@ tags:
   - shared
 ---
 created: 10:33 אחה״צ - יוני 13, 2024
-modified: 2:05 לפנה״צ - יוני 16, 2024
+modified: 2:08 לפנה״צ - יוני 16, 2024
 
 # Знак обнимашек
+
+Все знаки уже испорчены, ищу свободные
 ## Скрещенные руки
 
 Скрести руки на груди как будто обнимаешь себя. Если тебе ответят тем же - обнимайтесь
 
 Обнимашки - это акт [коммуникации](%D0%9A%D0%BE%D0%BC%D0%BC%D1%83%D0%BD%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F.md), тактильная связь существенно ускорит передачу [информации](%D0%98%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D1%8F.md)
+
+
+==Ещё можно делать шлёп шлёп== 
+
